[gd_scene load_steps=2 format=3 uid="uid://7ifxubftviak"]

[ext_resource type="Script" path="res://scripts/boarding/game_over.gd" id="1_gameover"]

[node name="GameOver" type="CanvasLayer"]
layer = 10
script = ExtResource("1_gameover")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.02, 0.02, 0.95)

[node name="ContentContainer" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="ContentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="ContentContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.8)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 56
text = "TIME'S UP!"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="ContentContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "You failed to escape in time..."
horizontal_alignment = 1

[node name="LootLabel" type="Label" parent="ContentContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "Loot Lost: $0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="ContentContainer/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="RetryButton" type="Button" parent="ContentContainer/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "TRY AGAIN"

[node name="MenuButton" type="Button" parent="ContentContainer/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "MAIN MENU"
